<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cse100.wi16.tritonstudy.create_user_profile_info"
    android:background="#2b92b9"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Name"
        android:paddingTop="7dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:id="@+id/create_user_tvName"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/create_user_etName"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:background="#016691"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Email"
        android:paddingTop="7dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:id="@+id/create_user_tvEmail"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/create_user_etEmail"
        android:textColor="#ffffff"
        android:background="#016691"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Phone Number:"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="7dp"
        android:id="@+id/create_user_tvPhone"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/create_user_etPhone"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:background="#016691"
        android:singleLine="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Bio:"
        android:id="@+id/create_user_tvBio"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/create_user_etBio"
        android:background="#016691"
        android:singleLine="false"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textAlignment="gravity"
        android:gravity="left|top" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Password:"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="7dp"
        android:id="@+id/create_user_tvPassword"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/create_user_etPassword"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:background="#016691"
        android:singleLine="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Confirm Password:"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="7dp"
        android:id="@+id/create_user_tvPaswordConfirm"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/create_user_etPasswordConfirm"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:background="#016691"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="Next"
            android:id="@+id/create_user_btnNext"
            android:background="#58ce46"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:onClick="onNextButtonClick"
            android:layout_marginLeft="100dp"
            android:layout_margin="8dp" />

    </LinearLayout>
</LinearLayout>
