<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".create_user_choose_classes"
    android:background="#2b92b9">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="367dp"
            android:layout_row="1"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Choose your enrolled courses:"
                android:id="@+id/choose_classes_tvTitle"
                android:textColor="#ffffff"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_rowSpan="2" />

            <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choose_classes_spClass1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/choose_classes_spClass2" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/choose_classes_spClass3" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/choose_classes_spClass4" />


        </LinearLayout>

        <GridLayout
            android:layout_width="339dp"
            android:layout_height="77dp"
            android:layout_gravity="center_horizontal|right"
            android:layout_marginTop="12dp"
            android:layout_marginRight="48dp"
            android:layout_row="2"
            android:layout_column="0">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="89dp"
                android:layout_height="27dp"
                android:text="Back"
                android:id="@+id/choose_classes_btnBack"
                android:layout_row="2"
                android:layout_column="0"
                android:background="#ff8700"
                android:onClick="onBackButtonClick"
                android:textColor="#ffffff" />

            <!--<Button-->
                <!--style="?android:attr/buttonStyleSmall"-->
                <!--android:layout_width="89dp"-->
                <!--android:layout_height="27dp"-->
                <!--android:text="Next"-->
                <!--android:id="@+id/create_user_choose_classes_btnNext"-->
                <!--android:layout_row="2"-->
                <!--android:layout_column="2"-->
                <!--android:background="#ff8700"-->
                <!--android:textColor="#ffffff"-->
                <!--android:onClick="onNextButtonClick"-->
                <!--android:layout_gravity="right" />-->

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="89dp"
                android:layout_height="27dp"
                android:text="Next"
                android:layout_row="2"
                android:layout_column="2"
                android:id="@+id/create_user_choose_classes_btnNext"
                android:background="#ff8700"
                android:textColor="#ffffff"
                android:layout_gravity="right"
                android:onClick="onNextButtonClick"

                android:layout_margin="8dp" />


        </GridLayout>
    </GridLayout>
</RelativeLayout>
