<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".add_studyTime"
    android:background="#2b92b9">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please select a study time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:id="@+id/create_user_add_times_title"
        android:layout_row="0"
        android:layout_column="0" />

</LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/create_user_add_times_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_studyTime_imgClock"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/icon_calendar"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Day:"
            android:id="@+id/add_studyTime_tvDay"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="12dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical" />

        <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/create_user_add_studyTime_spDays"-->
            <!--android:contentDescription="DayPicker"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:spinnerMode="dropdown"-->
            <!--android:background="#ffffff"-->
            <!--android:layout_row="2"-->
            <!--android:layout_column="3"/>-->

        <Spinner
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:id="@+id/create_user_add_studyTime_spDays"
            android:layout_row="2"
            android:layout_column="3"
            android:background="#ffffff" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_studyTime_imgClockStart"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/icon_clock"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Start Time:"
            android:id="@+id/add_studyTime_tvStartTime"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_margin="12dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="32dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/add_studyTime_tvDisplayStartTime"
            android:layout_row="3"
            android:layout_column="3"
            android:background="#016691"
            android:textColor="#ffffff"
            android:layout_margin="12dp"
            android:layout_gravity="center_vertical"
            android:onClick="timeStartDialog" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_studyTime_imgClockEnd"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@drawable/icon_clock"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="End Time:"
            android:id="@+id/add_studyTime_tvLabelEndTime"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_margin="12dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="32dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/add_studyTime_tvDisplayEndTime"
            android:layout_row="4"
            android:layout_column="3"
            android:background="#016691"
            android:textColor="#ffffff"
            android:layout_margin="12dp"
            android:layout_gravity="center_vertical"
            android:onClick="timeEndDialog" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_studyTime_imgClass"
            android:layout_row="5"
            android:layout_column="0"
            android:background="@drawable/icon_classroom"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Course:"
            android:id="@+id/add_studyTime_tvCourse"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_margin="12dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_studyTime_spCourse"
            android:spinnerMode="dropdown"
            android:background="#ffffff"
            android:layout_row="5"
            android:layout_column="3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_studyTime_imgLocation"
            android:layout_row="6"
            android:layout_column="0"
            android:background="@drawable/icon_location"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Location:"
            android:id="@+id/add_studyTime_tvDisplayLocation"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_margin="12dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_studyTime_spLocation"
            android:spinnerMode="dropdown"
            android:background="#ffffff"
            android:layout_row="6"
            android:layout_column="3" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/add_studyTime_btnSubmit"
            android:layout_row="10"
            android:layout_column="0"
            android:background="#ff8700"
            android:onClick="onSubmitButtonClick"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_columnSpan="4" />

    </GridLayout>
</LinearLayout>
