...
                    <!--android:layout_margin="4dp" />-->

                <Button
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:text="Create New User"
                    android:id="@+id/login_btnNewUser"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center|left"
                    android:textColor="#ffffff"
                    android:background="#ff8700"
                    android:padding="12dp"
...
